// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datafetch Button renders correctly 1`] = `
<button
  className="btn btn-outline-secondary fetch-button"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-rotate-right "
    data-icon="rotate-right"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={{}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M463.5 224H472c13.3 0 24-10.7 24-24V72c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2L413.4 96.6c-87.6-86.5-228.7-86.2-315.8 1c-87.5 87.5-87.5 229.3 0 316.8s229.3 87.5 316.8 0c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0c-62.5 62.5-163.8 62.5-226.3 0s-62.5-163.8 0-226.3c62.2-62.2 162.7-62.5 225.3-1L327 183c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8H463.5z"
      fill="currentColor"
      style={{}}
    />
  </svg>
</button>
`;

exports[`datafetch Button renders error 1`] = `
<button
  className="btn btn-outline-danger fetch-button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-xmark "
    data-icon="xmark"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={{}}
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
      fill="currentColor"
      style={{}}
    />
  </svg>
</button>
`;

exports[`datafetch Button renders fetching 1`] = `
<button
  className="btn btn-outline-secondary fetch-button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-circle-notch fa-spin "
    data-icon="circle-notch"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={{}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
      fill="currentColor"
      style={{}}
    />
  </svg>
</button>
`;

exports[`datafetch Button renders success 1`] = `
<button
  className="btn btn-outline-success fetch-button"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-check "
    data-icon="check"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={{}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M470.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L192 338.7 425.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
      fill="currentColor"
      style={{}}
    />
  </svg>
</button>
`;
